# loto-report-generator

./: .env.dev  .gitignore  .pre-commit-config.yaml  CreateLOTOPDF.py  CreateLOTOPDF_2.py  CreatePDF.py  Dockerfile  FillPDF.py  README.md  app.py  automate_pdf.py  cron.host  data.json  data2.json  data_1.json  data_2.json  data_3.json  data_4.json  deploy-dev.sh  deploy.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  fillPDF2.py  generate_pdf.py  helper_functions.py  index.html  main.html  main.py  mongod.conf  nginx.conf  nginx.dev.conf  package-lock.json  package.json  pyproject.toml  readme_helper.py  setup.py  template.json  template2.json  (+3 more)
.github/workflows/: db_status.yml  pythonScriptTests.yml  serverEndpointTests.yml  tests.yml
LOTO_Python/: pyproject.toml
src/api/: LatLngFinder.py  auth_utils.py  cleanup_script.py  create_token.py  endpoints.json  logging_config.py  main.py  manual_hash.py  rate_limit_test.py
src/database/: clear_db.py  db.py  db_2.py  db_template.json  db_template.txt  decode.py
src/loto-report-generator/: __init__.py  generate_pdf.py
src/loto_python/: __init__.py
src/loto_report_generator/: __init__.py  generate_pdf.py
src/pdf/: automate_pdf.py  generate_pdf.py
src/tests/: conftest.py  pytest.ini  test_data.json  test_data_3.json  test_db_status.py  test_endpoints.py  test_endpoints_admin.py  test_endpoints_auth_pages.py  test_endpoints_maintenance.py  test_health.py  test_pdf_generation.py  test_pdf_scripts.py
src/web/: index.html  input_form.html  main.html
src/web/css/: input_form.css
src/web/dependencies/: energySources.json
src/web/scripts/: energySources.json  input_form.js  input_form.ts  input_form_2.js  input_form_2.ts  input_form_3.js  input_form_ts.ts  json_handlers.js  upload_json.js
src/web/static/css/: create_account.css  forgot_password.css  input_form.css  login.css  map.css  pdf_list.css  update_report.css  user_list.css  view_report.css
src/web/static/dependencies/: energySources.json
src/web/static/js/: create_account.js  forgot_password.js  input_form.js  json_handlers.js  login.js  map.js  pdf_list.js  update_report.js  update_report_2.js  upload_json.js  view_report.js
src/web/static/scripts/: input_form.d.ts  input_form.d.ts.map  input_form.js  input_form.js.map
src/web/templates/: audit_logs.html  create_account.html  forgot_password.html  input_form.html  login.html  map.html  pdfGenerationClientSide.html  pdf_list.html  update_report.html  update_report_2.html  user_list.html  view_report.html
tests/: test_data.json
tools/: readme_helper.py  sign_tag.sh
