[project]
name = "loto-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kyle Schang", email = "kyle@schang.net" }
]
requires-python = ">=3.13.2"
dependencies = [
    "pillow>=11.2.1",
    "reportlab>=4.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "icecream>=2.1.5",
    "mypy>=1.16.1",
    "pipdeptree>=2.26.1",
    "pytest>=8.4.1",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.12.1",
]
