[project]
name = "loto-report-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kyle Schang", email = "kyle@schang.net" }
]
requires-python = ">=3.13.2"
dependencies = [
    "apscheduler>=3.11.1",
    "argon2-cffi>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi[all]>=0.115.14",
    "git-filter-repo>=2.47.0",
    "icecream>=2.1.5",
    "jinja2>=3.1.6",
    "mypy>=1.16.1",
    "passlib[bcrypt]>=1.7.4",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "pre-commit>=4.3.0",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.3",
    "pypdf>=6.1.3",
    "pypdf2>=3.0.1",
    "pytest>=8.4.1",
    "pytest-order>=1.3.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "reportlab>=4.4.2",
    "requests>=2.32.4",
    "sendgrid>=6.12.5",
    "shapely>=2.1.2",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loto_python"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "icecream>=2.1.5",
    "mypy>=1.16.1",
    "pipdeptree>=2.26.1",
    "pytest>=8.4.1",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.12.1",
]

### black
[tool.black]
line-length = 132
target-version = ["py313"]


### mypy
# pyproject.toml
[tool.mypy]
python_version = "3.13"

# Scope: only check your code, not venv/build
files = [
    "src",             # adjust if your code lives elsewhere
    "scripts",         # optional
]

# Start loose to get to green quickly
ignore_missing_imports = true
check_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_defs = false
no_implicit_optional = false

# Noise reduction
warn_unused_ignores = true
warn_redundant_casts = true
show_error_context = true
pretty = true
color_output = true

# Optional: temporarily skip heavy/test folders
exclude = [
    "^build/.*",
    "^dist/.*",
    "^tests?/generated_pdfs/.*",
    "^tests?/automated_pdfs/.*",
]

[[tool.mypy.overrides]]
module = "attendance.mongo.*"
disallow_any_generics = false

[[tool.mypy.overrides]]
module = "icecream"
ignore_missing_imports = true

### ruff
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]


# Same as Black.
line-length = 132
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks, and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
#select = ["E4", "E7", "E9", "F"]
select = ["ALL"]
ignore = [
    "ANN101", # missing-type-self
    "D203", # one-blank-line-before-class
    "D213", # multi-line-summary-second-line
    "INP001", # implicit-namespace-package
    "T201", # print
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = [
    #    "ALL",
    "I001", # unsorted-imports
]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
